Fixed Overlap

--- a/src/responsive.css
+++ b/src/responsive.css
@@ -74,7 +74,6 @@
     .ContactForm-Form {
         display: flex !important;
         flex-direction: column;
-        max-height: 80vh;
     }
 
     .ContactForm-Form .inputGroup {
@@ -118,7 +117,7 @@
 
     .HomeHeroMain {
         flex-direction: column-reverse;
-        min-height: calc(100vh - 120px);
+        min-height: calc(100vh - 80px);
         align-items: center;
         padding: 0 1rem;
     }
